<resources>
    <string name="app_name">DrinkControl</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="information">Information</string>
    <string name="wochenansicht">Wochenansicht</string>
    <string name="h_utiger_verbrauch">Häutiger Verbrauch</string>
    <string name="wasserstation">Wasserstation</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_drink_station">Map</string>
</resources>
