<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sueleyman.drinkcontrol.WeekActivity"
    android:background="#ffffff"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout
        android:id="@+id/Content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.00">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="203dp"
            app:mcv_showOtherDates="all"
            app:mcv_selectionColor="#00F"
            />

            <TextView
                android:id="@+id/ergebnis"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:text="getrunken in Liter"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </FrameLayout>



    <Button
        android:id="@+id/verbrauch"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/h_utiger_verbrauch"
        android:textSize="18sp"
        android:theme="@android:style/Theme.Holo" />

    <Button
        android:id="@+id/week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/wochenansicht"
        android:theme="@android:style/Theme.Holo" />

    <Button
        android:id="@+id/settings"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/einstellungen"
        android:textSize="18sp"
        android:theme="@android:style/Theme.Holo"
        />

    <Button
        android:id="@+id/info"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/information"
        android:textSize="18sp"
        android:theme="@android:style/Theme.Holo" />

    <Button
        android:id="@+id/waterstation"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/wasserstation"
        android:textSize="18sp"
        android:theme="@android:style/Theme.Holo"
        />


</LinearLayout>
